--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
 body{
-    background-color: blue;
+    background-color: red;
+    color: white;
+}
+
+h1{
+    color: blueviolet;
+}
+
+h2{
+    color: blue;
+}
+
+h3{
+    color: green;
 }
