--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,26 @@
-body{
+html{
+    font-size: 62.5%;
+}
 
+body{
+    font-size: 16px; /*1rem = 16px*/
 }
 
 h1{
-    background-color: rgb(179, 247, 19);
-    color: blueviolet;
-    text-align: center;
+    font-size: 2.5rem;
 }
 
 h2{
-    color: blue;
+    font-size: 1.8rem;
 }
 
-h3{
-    color: rgb(179, 57, 204);
+.titulo{
+    color: darkcyan;
+    font-size: 3.8rem;
+    text-align: center;
+}
+
+.titulo span{
+    color: #187e29;
+    font-size: 2rem;
 }
