--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,13 @@ html{
 }
 
 body{
+    font-family: 'Oswald', sans-serif;
     font-size: 16px; /*1rem = 16px*/
 }
 
 h1{
     font-size: 2.5rem;
+    font-weight: 400;
 }
 
 h2{
@@ -23,4 +25,8 @@ h2{
 .titulo span{
     color: #187e29;
     font-size: 2rem;
+}
+
+p{
+    font-size: 2.6rem;
 }
