--- a/curriculum/css/styles.css
+++ b/curriculum/css/styles.css
@@ -17,10 +17,21 @@ h2{
     color: #0074c2;
 }
 
+h3{
+    color: #0074c2;
+}
 .image{
     position: absolute;
     width: 290px;
     right: 0;
     top: 0;
     height: auto;
+}
+
+.formacion{
+    color: #a52e2e;
+}
+
+.experiencia{
+    color: #a52e2e;
 }
