--- a/basic_html/css/styles.css
+++ b/basic_html/css/styles.css
@@ -117,11 +117,44 @@ main .education{
     padding-left: 1rem;
 }
 
-.review{
+.reviews-container {
+    max-width: 1000px; /* Mismo ancho que el contenedor principal */
+    margin: 0 auto;
+    padding: 1rem;
     background-color: yellow;
+}
+.reviews-container .reviews {
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+}
+
+.footer{
+    text-align: center;
+}
+
+.rewiew{
+    background-color: blue;
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Cambia el color y la opacidad según tu preferencia */
+}
+
+.review{
+    background-color: rgb(224, 224, 167);
+    padding: 1rem;
+    display: block;
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Cambia el color y la opacidad según tu preferencia */
+
+}
+
+.reviews-item{
+    background-color: rgb(56, 218, 45);
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Cambia el color y la opacidad según tu preferencia */
 }
 
 main{
     display: flex;
 
 }
+
