--- a/basic_html/css/styles.css
+++ b/basic_html/css/styles.css
@@ -76,7 +76,7 @@ img{
 }
 
 .container{
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -103,25 +103,34 @@ header .top{
 }
 
 main .projects{
-    background-color: blue;
+    width: 33%;
+    background-color: #449de7;
+    padding: 1rem;
+    flex: 1; /* Asegura que cada columna ocupe el mismo espacio horizontal */
     padding: 1rem;
 }
 
 main .work{
-    background-color: red;
+    width: 33%;
+    background-color: rgb(255, 164, 115);
     padding-left: 1rem;
+    flex: 1; /* Asegura que cada columna ocupe el mismo espacio horizontal */
+    padding: 1rem;
 }
 
 main .education{
-    background-color: green;
+    width: 33%;
+    background-color: rgb(111, 224, 111);
     padding-left: 1rem;
+    flex: 1; /* Asegura que cada columna ocupe el mismo espacio horizontal */
+    padding: 1rem;
 }
 
 .reviews-container {
-    max-width: 1000px; /* Mismo ancho que el contenedor principal */
+    max-width: 1200px; /* Mismo ancho que el contenedor principal */
     margin: 0 auto;
     padding: 1rem;
-    background-color: yellow;
+    background-color: #75c1ff;
 }
 .reviews-container .reviews {
     display: flex;
@@ -134,27 +143,30 @@ main .education{
 }
 
 .rewiew{
+    flex: 1;
     background-color: blue;
     padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Cambia el color y la opacidad según tu preferencia */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
 }
 
 .review{
+    flex: 1;
     background-color: rgb(224, 224, 167);
     padding: 1rem;
     display: block;
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); /* Cambia el color y la opacidad según tu preferencia */
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5); 
 
 }
 
 .reviews-item{
+    flex: 1;
     background-color: rgb(56, 218, 45);
     padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Cambia el color y la opacidad según tu preferencia */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
 }
 
 main{
     display: flex;
-
+    justify-content: space-between;
 }
 
