--- a/galeria/css/styles.css
+++ b/galeria/css/styles.css
@@ -52,11 +52,13 @@ header.container {
 /* Estilo de las imágenes */
 .galeria img {
     width: 100%;
-    height: 200px; /* Altura fija para todas las imágenes */
-    object-fit: cover; /* Para que se recorten sin distorsión */
+    height: 200px;
+    object-fit: cover;
     border: 2px solid #fff;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Sombra para las imágenes */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    image-rendering: crisp-edges; /* Mejora definición */
 }
+
 
 
 
