--- a/aplicar_estils/css/styles.css
+++ b/aplicar_estils/css/styles.css
@@ -43,4 +43,32 @@ div:nth-of-type(3) p {
     background-color: pink;
 }  
 
+div:nth-of-type(3) p:nth-of-type(2) {
+    border: 5px;
+}
 
+div:nth-of-type(3) em {
+    color: white;
+    font-size: 20px;
+}
+
+input[type="checkbox"]:checked {
+    margin-left: 50px;
+}
+
+label{
+    text-transform: uppercase;
+}
+
+#special::first-letter {
+    color: green;
+    font-size: 100px;
+}
+
+h1:hover {
+    color: blue;
+}
+
+a:visited {
+    color: grey;
+}
